--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "element-china-area-data": "^6.1.0",
     "element-plus": "^2.9.9",
     "vue": "^3.5.13",
